arreglo link e imágenes

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="proyectos">
             <div class="card">
                 <h3>Pokedéx</h3>
-                <img src="ArticulosDB.png" alt="https://github.com/lubari/PokemonsDB">
+                <img src="PokemonDB.png" alt="https://github.com/lubari/PokemonsDB">
                 <p>
                     Aplicación de escritorio .Net Framework C# y uso de base de datos
                 </p>
@@ -80,7 +80,7 @@
             </div>
             <div class="card">
                 <h3>Catálogo</h3>
-                <img src="PokemonDB.png" alt="Maxi Programa en YouTube">
+                <img src="ArticulosDB.png" alt="Maxi Programa en YouTube">
                 <p>
                     Proyecto de Carga de Articulos
                 </p>
@@ -92,7 +92,7 @@
                 <p>
                     Pequeña trivia como práctica de html css y javascript 
                 </p>
-                <a href="https://lubari.github.io/practica-html/" target="_blank">Ver</a>
+                <a href="https://github.com/lubari/practica-html/tree/main" target="_blank">Ver</a>
             </div>
         </div>
     </section>
