change url quiz

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <p>
                     Pequeña trivia como práctica de html css y javascript 
                 </p>
-                <a href="https://github.com/lubari/practica-html/tree/main" target="_blank">Ver</a>
+                <a href="https://lubari.github.io/practica-html/" target="_blank">Ver</a>
             </div>
         </div>
     </section>
